# agent-c

./: .mcp.json.example  CMakeLists.txt  README.md
docs/: MIGRATION.md  README_CN.md
docs/design/: design.md  design_v2.md  interface.md  memory_design.md  snippets.md  todo.md
examples/: CMakeLists.txt  basic.c
examples/hosted/: chat_demo.c  chat_git_commit.c  chat_kimi2.5.c  chat_markdown.c  chat_mcp.c  chat_multi_agent.c  chat_skills.c  chat_stream.c  chat_stream_tools.c  chat_tools.c  chat_trace.c  chat_tui.c  hello.c  test_skills.c
examples/hosted/skills/code-review/: SKILL.md
examples/hosted/skills/conventional-commits/: SKILL.md
examples/hosted/skills/debugging/: SKILL.md
examples/hosted/skills/documentation/: SKILL.md
examples/terminal/: chat_demo.c  chat_markdown.c  chat_tools.c  chat_tui.c
extras/arc-cli/: CMakeLists.txt  README.md  main.c
extras/arc-cli/core/: minimal_cli.c
extras/arc-cli/include/: minimal_cli.h
extras/arc-cli/tools/: builtin_tools.c
extras/arc-coder/: .gitignore  CMakeLists.txt  main.c
extras/arc-coder/include/: code_agent.h  code_tools_enhanced.h  prompt_loader.h
extras/arc-coder/src/: code_agent.c  code_tools_enhanced.c
extras/arc-coder/src/tools/: tool_bash.c  tool_edit.c  tool_grep.c  tool_ls.c  tool_read.c  tool_write.c
extras/args/: CMakeLists.txt  README.md
extras/args/include/: platform_init.h
extras/args/src/: platform_init.c
extras/code-agentc/: CMakeLists.txt
extras/code-agentc/include/: code_tools_enhanced.h
extras/code-agentc/src/: code_agent.c  code_tools_enhanced.c  prompt_loader.c
extras/minimal_cli/: CMakeLists.txt  main.c
extras/minimal_cli/core/: minimal_cli.c
extras/minimal_cli/include/: builtin_tools.h
extras/minimal_cli/tools/: builtin_tools.c
include/: agentc.h
include/agentc/: agent.h  llm.h  tool.h
libs/ac_core/: CMakeLists.txt
libs/ac_core/include/: agentc.h  arc.h
libs/ac_core/include/agentc/: agent.h  arena.h  error.h  http_client.h  llm.h  log.h  mcp.h  memory.h  message.h  platform.h  session.h  tool.h
libs/ac_core/include/arc/: agent.h  agent_hooks.h  arena.h  error.h  llm.h  log.h  mcp.h  memory.h  message.h  platform.h  session.h  sse_parser.h  tool.h  trace.h
libs/ac_core/port/: http_client.c  http_client.h  http_curl.c  pthread_port.h
libs/ac_core/port/freertos/: log_freertos.c  time_freertos.c
libs/ac_core/port/posix/: log_posix.c  time_posix.c
libs/ac_core/port/posix/http/: http_curl.c
libs/ac_core/port/windows/: log_windows.c  time_windows.c
libs/ac_core/src/: agent.c  agent_hooks.c  agent_hooks_internal.h  agentc.c  arc.c  arena.c  log.c  session.c  sse_parser.c  tool.c  trace.c
libs/ac_core/src/llm/: anthropic_api.c  llm.c  llm_internal.h  llm_provider.h  openai_api.c  provider.c
libs/ac_core/src/llm/message/: message.c  message.h  message_json.c  message_json.h
libs/ac_core/src/llm/providers/: README.md  anthropic.c  openai.c
libs/ac_core/src/llm/tool_call/: tool_call.c  tool_call.h  tool_call_json.c  tool_call_json.h
libs/ac_core/src/mcp/: mcp.c  mcp_http.c  mcp_internal.h  mcp_sse.c
libs/ac_core/src/memory/: memory.c  message.c
libs/ac_core/src/tools/: tool.c  tool_mcp.c
libs/ac_hosted/: CMakeLists.txt  README.md
libs/ac_hosted/include/agentc/: http_pool.h  mcp.h  rules.h  skills.h
libs/ac_hosted/include/arc/: env.h  http_pool.h  rules.h  sandbox.h  skills.h  trace_exporters.h
libs/ac_hosted/src/env/: env.c
libs/ac_hosted/src/http_pool/: http_pool.c
libs/ac_hosted/src/markdown/: md_parser.c
libs/ac_hosted/src/mcp/: mcp.c
libs/ac_hosted/src/rules/: rules.c
libs/ac_hosted/src/sandbox/: sandbox_common.c  sandbox_fallback.c  sandbox_internal.h  sandbox_linux.c  sandbox_macos.c
libs/ac_hosted/src/skills/: skill_parser.c  skill_prompt.c  skill_tool.c  skills.c  skills_internal.h
libs/ac_hosted/src/trace/: trace_json_exporter.c
src/: agent.c  llm.c  tool.c
src/backend/: curl_backend.c
src/render/markdown/: md_parser.c
tests/: CMakeLists.txt
tools/: CMakeLists.txt
tools/moc/: CMakeLists.txt  main.c  moc.h  moc_codegen.c
